--- a/SBM2 configuration evaluator.ipynb
+++ b/SBM2 configuration evaluator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "50ad1f6a",
+   "id": "2fa362e9",
    "metadata": {},
    "source": [
     "# SBM2 configuration tester\n",
@@ -10,7 +10,8 @@
     "This notebook runs the SBM2 detection algorithm with a selected configuration and prints a summary. The summarry includes:\n",
     "- dates and hours on which the algoritm triggered\n",
     "    - dates where the algorithm made a correct detection\n",
-    "    - unknown dates which can be added (counted as false positives by default)\n",
+    "    - dates where the algorithm made an incorrect detection\n",
+    "    - unknown dates which can be added (counted as incorrect detections by default)\n",
     "- configuration accuracy\n",
     "- more?\n",
     "\n",
@@ -121,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "57c2696f",
+   "id": "ca23a45d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e99f9100",
+   "id": "6a19aed3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "acb79b42",
    "metadata": {},
    "outputs": [],
@@ -166,12 +167,15 @@
     "custom1 = {'EPEAK_THRES': 200, 'FP_MIN': 5000, 'FP_MAX': 50000, 'NW_THRES': 1, 'DT_LW': 1200,  'N_LW_THRES': 5 , 'title': 'custom1', 'type': 'dev'}\n",
     "\n",
     "# Custom config 2\n",
-    "custom2 = {'EPEAK_THRES': 150, 'FP_MIN': 5000, 'FP_MAX': 50000, 'NW_THRES': 1, 'DT_LW': 1200,  'N_LW_THRES': 5 , 'title': 'custom2', 'type': 'dev'}\n"
+    "custom2 = {'EPEAK_THRES': 150, 'FP_MIN': 5000, 'FP_MAX': 50000, 'NW_THRES': 1, 'DT_LW': 1200,  'N_LW_THRES': 5 , 'title': 'custom2', 'type': 'dev'}\n",
+    "\n",
+    "# Custom config 3\n",
+    "custom3 = {'EPEAK_THRES': 728, 'FP_MIN': 10000, 'FP_MAX': 100000, 'NW_THRES': 3, 'DT_LW': 1200, 'N_LW_THRES': 20, 'title': 'custom3', 'type': 'suspect'}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "00ecec51",
    "metadata": {},
    "outputs": [
@@ -179,40 +183,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "incorrect: 2020/07/10 - 10\n",
-      "correct: 2020/11/17 - 13\n",
-      "correct: 2020/11/17 - 14\n",
-      "incorrect: 2020/12/27 - 03\n",
-      "incorrect: 2020/12/27 - 04\n",
-      "incorrect: 2020/12/27 - 05\n",
-      "incorrect: 2020/12/27 - 06\n",
-      "incorrect: 2020/12/27 - 07\n",
-      "incorrect: 2020/12/27 - 08\n",
-      "incorrect: 2020/12/27 - 09\n",
-      "incorrect: 2020/12/27 - 10\n",
-      "correct: 2021/05/09 - 16\n",
-      "correct: 2021/05/22 - 00\n",
-      "correct: 2021/05/22 - 07\n",
-      "correct: 2021/05/23 - 08\n",
-      "correct: 2021/05/23 - 09\n",
-      "correct: 2021/05/23 - 10\n",
-      "correct: 2021/05/23 - 11\n",
-      "check 2021/05/25 - 07\n",
-      "incorrect: 2021/05/31 - 19\n",
-      "incorrect: 2021/05/31 - 20\n",
-      "incorrect: 2021/06/01 - 02\n",
-      "incorrect: 2021/06/04 - 11\n",
-      "incorrect: 2021/06/04 - 20\n",
-      "incorrect: 2021/06/07 - 20\n",
-      "total correct: 9\n",
-      "total incorrect: 16\n"
+      "check 2021/03/11 - 08\n",
+      "check 2021/03/11 - 09\n",
+      "total correct: 0\n",
+      "total incorrect: 2\n"
      ]
     }
    ],
    "source": [
     "# Evaluating\n",
-    "a = evaluate(condef)"
+    "a = evaluate(custom3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac1f5bfc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
