--- a/SBM2 configuration evaluator.ipynb
+++ b/SBM2 configuration evaluator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2fa362e9",
+   "id": "dbd523fd",
    "metadata": {},
    "source": [
     "# SBM2 configuration tester\n",
@@ -69,8 +69,8 @@
     "\n",
     "def set_conf(conf):\n",
     "    EPEAK_THRES = conf['EPEAK_THRES']\n",
-    "    FP_MIN = conf['FP_MIN'] * 0.5\n",
-    "    FP_MAX = conf['FP_MAX'] * 0.5\n",
+    "    FP_MIN = conf['FP_MIN'] \n",
+    "    FP_MAX = conf['FP_MAX'] \n",
     "    NW_THRES = conf['NW_THRES']\n",
     "    DT_LW = conf['DT_LW']\n",
     "    N_LW_THRES = conf['N_LW_THRES']\n",
@@ -94,7 +94,7 @@
     "    # Known dates - sbm includes known type III. events; fp includes false positives often returned by SBM2 detection algorithm.\n",
     "    # Check dates and add them to the correct list if the Evaluation cell printed 'check DATE'. \n",
     "    sbm = ['2021/05/22','2021/05/23','2020/12/09','2020/12/10','2020/12/11','2020/12/12','2020/12/13','2020/11/18','2021/05/09','2020/11/17','2021/05/29','2020/12/14']\n",
-    "    fp  = ['2021/06/01','2021/06/04','2021/06/08','2021/05/10','2021/01/13','2021/01/14','2020/12/06','2020/08/31','2020/08/27','2020/08/29','2020/07/24','2020/04/19','2020/04/18','2020/05/02','2020/07/10','2020/12/17','2021/03/27','2021/03/20','2021/05/31','2021/01/05','2021/03/19','2020/12/27','2020/05/30','2020/07/23','2020/08/04','2020/11/24','2020/12/20','2021/06/07','','','','','','','','','','','','','','']\n",
+    "    fp  = ['2021/03/11','2021/06/01','2021/06/04','2021/06/08','2021/05/10','2021/01/13','2021/01/14','2020/12/06','2020/08/31','2020/08/27','2020/08/29','2020/07/24','2020/04/19','2020/04/18','2020/05/02','2020/07/10','2020/12/17','2021/03/27','2021/03/20','2021/05/31','2021/01/05','2021/03/19','2020/12/27','2020/05/30','2020/07/23','2020/08/04','2020/11/24','2020/12/20','2021/06/07','','','','','','','','','','','','','','']\n",
     "    \n",
     "    correct = 0\n",
     "    incorrect = 0 \n",
@@ -115,14 +115,13 @@
     "                print('incorrect: ' + i)\n",
     "            \n",
     "    print('total correct: ' + str(correct))\n",
-    "    print('total incorrect: ' + str(incorrect))\n",
-    "    return times"
+    "    print('total incorrect: ' + str(incorrect))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ca23a45d",
+   "id": "7c3d3ce2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6a19aed3",
+   "id": "36464f2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "acb79b42",
    "metadata": {},
    "outputs": [],
@@ -167,15 +166,12 @@
     "custom1 = {'EPEAK_THRES': 200, 'FP_MIN': 5000, 'FP_MAX': 50000, 'NW_THRES': 1, 'DT_LW': 1200,  'N_LW_THRES': 5 , 'title': 'custom1', 'type': 'dev'}\n",
     "\n",
     "# Custom config 2\n",
-    "custom2 = {'EPEAK_THRES': 150, 'FP_MIN': 5000, 'FP_MAX': 50000, 'NW_THRES': 1, 'DT_LW': 1200,  'N_LW_THRES': 5 , 'title': 'custom2', 'type': 'dev'}\n",
-    "\n",
-    "# Custom config 3\n",
-    "custom3 = {'EPEAK_THRES': 728, 'FP_MIN': 10000, 'FP_MAX': 100000, 'NW_THRES': 3, 'DT_LW': 1200, 'N_LW_THRES': 20, 'title': 'custom3', 'type': 'suspect'}"
+    "custom2 = {'EPEAK_THRES': 150, 'FP_MIN': 5000, 'FP_MAX': 50000, 'NW_THRES': 1, 'DT_LW': 1200,  'N_LW_THRES': 5 , 'title': 'custom2', 'type': 'dev'}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "00ecec51",
    "metadata": {},
    "outputs": [
@@ -183,8 +179,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "check 2021/03/11 - 08\n",
-      "check 2021/03/11 - 09\n",
+      "incorrect: 2021/03/11 - 08\n",
+      "incorrect: 2021/03/11 - 09\n",
       "total correct: 0\n",
       "total incorrect: 2\n"
      ]
@@ -192,13 +188,89 @@
    ],
    "source": [
     "# Evaluating\n",
-    "a = evaluate(custom3)"
+    "evaluate(degdef)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9916f62f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "correct: 2020/11/17 - 13\n",
+      "correct: 2020/11/17 - 14\n",
+      "incorrect: 2020/12/27 - 04\n",
+      "incorrect: 2020/12/27 - 08\n",
+      "check 2021/01/26 - 13\n",
+      "check 2021/01/26 - 14\n",
+      "check 2021/01/26 - 15\n",
+      "check 2021/01/26 - 16\n",
+      "check 2021/01/26 - 17\n",
+      "check 2021/01/26 - 18\n",
+      "check 2021/02/18 - 14\n",
+      "check 2021/02/18 - 15\n",
+      "check 2021/02/19 - 10\n",
+      "check 2021/02/19 - 11\n",
+      "check 2021/02/19 - 12\n",
+      "check 2021/02/19 - 13\n",
+      "check 2021/02/19 - 20\n",
+      "check 2021/02/22 - 16\n",
+      "check 2021/02/22 - 17\n",
+      "check 2021/02/22 - 18\n",
+      "check 2021/02/22 - 19\n",
+      "check 2021/02/22 - 20\n",
+      "check 2021/03/10 - 21\n",
+      "check 2021/03/10 - 23\n",
+      "incorrect: 2021/03/11 - 00\n",
+      "incorrect: 2021/03/11 - 01\n",
+      "incorrect: 2021/03/11 - 02\n",
+      "incorrect: 2021/03/11 - 03\n",
+      "incorrect: 2021/03/11 - 04\n",
+      "incorrect: 2021/03/11 - 05\n",
+      "incorrect: 2021/03/11 - 06\n",
+      "incorrect: 2021/03/11 - 07\n",
+      "incorrect: 2021/03/11 - 08\n",
+      "incorrect: 2021/03/11 - 09\n",
+      "incorrect: 2021/03/11 - 10\n",
+      "incorrect: 2021/03/11 - 11\n",
+      "incorrect: 2021/03/11 - 12\n",
+      "incorrect: 2021/03/11 - 13\n",
+      "incorrect: 2021/03/11 - 15\n",
+      "incorrect: 2021/03/11 - 16\n",
+      "incorrect: 2021/03/11 - 17\n",
+      "incorrect: 2021/03/11 - 18\n",
+      "incorrect: 2021/03/11 - 19\n",
+      "incorrect: 2021/03/11 - 20\n",
+      "incorrect: 2021/03/11 - 21\n",
+      "incorrect: 2021/03/11 - 22\n",
+      "incorrect: 2021/03/11 - 23\n",
+      "check 2021/03/12 - 00\n",
+      "check 2021/03/12 - 01\n",
+      "correct: 2021/05/09 - 16\n",
+      "correct: 2021/05/22 - 00\n",
+      "correct: 2021/05/22 - 07\n",
+      "correct: 2021/05/23 - 08\n",
+      "correct: 2021/05/23 - 09\n",
+      "correct: 2021/05/23 - 10\n",
+      "correct: 2021/05/23 - 11\n",
+      "incorrect: 2021/05/31 - 19\n",
+      "total correct: 9\n",
+      "total incorrect: 48\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluate(condef)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac1f5bfc",
+   "id": "14e1ab8a",
    "metadata": {},
    "outputs": [],
    "source": []
