Evaluated new configurations
custom3 looks good

--- a/SBM2 configuration evaluator.ipynb
+++ b/SBM2 configuration evaluator.ipynb
@@ -62,10 +62,39 @@
     "    E = E.astype(int)\n",
     "    F = F.astype(int)\n",
     "    temp = A + E + F\n",
+    "    condmet = A + E + F\n",
     "    temp[temp<3] = 0\n",
     "    temp[temp==3] = 1\n",
     "    temp = temp.astype(int)\n",
-    "    return temp\n",
+    "    return temp, condmet\n",
+    "\n",
+    "def SBM2_Find(EV, Epoch, DT):\n",
+    "    counter = np.zeros(EV.size)\n",
+    "    for i in  zip(*np.where(EV>0)):\n",
+    "        ind = i[0]\n",
+    "        t1 = Epoch[ind]\n",
+    "        t0 = t1 - DT*1e9\n",
+    "        EP0 = Epoch[0:ind]\n",
+    "        counter[ind] = np.sum(EV[np.where(EP0>t0)])\n",
+    "    return counter\n",
+    "\n",
+    "def get_triggers(EIRB, TH, Ep,time, delay):\n",
+    "    Ep =Ep*1e-9\n",
+    "    x = Ep[np.where(EIRB>TH)]\n",
+    "    tEp = np.array([])\n",
+    "    for i in x:\n",
+    "        if i==x[0]:\n",
+    "            t0 = i\n",
+    "            tEp = np.append(tEp, t0)\n",
+    "        else:\n",
+    "            if i-delay>t0:\n",
+    "                t0 = i\n",
+    "                tEp = np.append(tEp, t0)\n",
+    "    indxs = np.array([])\n",
+    "    for i in tEp:\n",
+    "        ind = np.where(Ep == i)\n",
+    "        indxs = np.append(indxs, ind)\n",
+    "    return indxs\n",
     "\n",
     "def set_conf(conf):\n",
     "    EPEAK_THRES = conf['EPEAK_THRES']\n",
@@ -74,17 +103,20 @@
     "    NW_THRES = conf['NW_THRES']\n",
     "    DT_LW = conf['DT_LW']\n",
     "    N_LW_THRES = conf['N_LW_THRES']\n",
-    "    return EPEAK_THRES, FP_MIN, FP_MAX, NW_THRES, DT_LW, N_LW_THRES\n",
+    "    DT_SBM2 = conf['DT_SBM2']\n",
+    "    RUA = conf['RUA']\n",
+    "    return EPEAK_THRES, FP_MIN, FP_MAX, NW_THRES, DT_LW, N_LW_THRES, DT_SBM2, RUA\n",
     "\n",
-    "def evaluate(conf):\n",
-    "    EPEAK_THRES, FP_MIN, FP_MAX, NW_THRES, DT_LW, N_LW_THRES = set_conf(conf)\n",
+    "def evaluate(conf, loudness=1):\n",
+    "    EPEAK_THRES, FP_MIN, FP_MAX, NW_THRES, DT_LW, N_LW_THRES, DT_SBM2, RUA = set_conf(conf)\n",
     "    \n",
-    "    EV = SBM2_Check(AMP, NR, FP, EPEAK_THRES, NW_THRES, FP_MIN, FP_MAX, rua)\n",
-    "    EVi = list(np.where(EV==1))[0]\n",
+    "    EV, condmet = SBM2_Check(AMP, NR, FP, EPEAK_THRES, NW_THRES, FP_MIN, FP_MAX, rua)\n",
+    "    EIRB = SBM2_Find(EV, Epoch, DT_LW)\n",
+    "    triggerinx = get_triggers(EIRB, N_LW_THRES, Epoch,time, delay = DT_SBM2)\n",
     "    \n",
     "    Ep = Epoch*1e-9\n",
     "    times = np.array([])\n",
-    "    for i in list(EVi.tolist()):\n",
+    "    for i in list(triggerinx.astype(int).tolist()):\n",
     "        E1 = Ep[i]\n",
     "        temp = Ep[0:i]\n",
     "        SE = np.sum(EV[np.where(temp>E1-DT_LW)])\n",
@@ -94,28 +126,44 @@
     "    # Known dates - sbm includes known type III. events; fp includes false positives often returned by SBM2 detection algorithm.\n",
     "    # Check dates and add them to the correct list if the Evaluation cell printed 'check DATE'. \n",
     "    sbm = ['2021/05/22','2021/05/23','2020/12/09','2020/12/10','2020/12/11','2020/12/12','2020/12/13','2020/11/18','2021/05/09','2020/11/17','2021/05/29','2020/12/14']\n",
-    "    fp  = ['2021/03/11','2021/06/01','2021/06/04','2021/06/08','2021/05/10','2021/01/13','2021/01/14','2020/12/06','2020/08/31','2020/08/27','2020/08/29','2020/07/24','2020/04/19','2020/04/18','2020/05/02','2020/07/10','2020/12/17','2021/03/27','2021/03/20','2021/05/31','2021/01/05','2021/03/19','2020/12/27','2020/05/30','2020/07/23','2020/08/04','2020/11/24','2020/12/20','2021/06/07','','','','','','','','','','','','','','']\n",
+    "    fp  = ['2020/03/05','2021/03/11','2021/06/01','2021/06/04','2021/06/08','2021/05/10','2021/01/13','2021/01/14','2020/12/06','2020/08/31','2020/08/27','2020/08/29','2020/07/24','2020/04/19','2020/04/18','2020/05/02','2020/07/10','2020/12/17','2021/03/27','2021/03/20','2021/05/31','2021/01/05','2021/03/19','2020/12/27','2020/05/30','2020/07/23','2020/08/04','2020/11/24','2020/12/20','2021/06/07','','','','','','','','','','','','','','']\n",
     "    \n",
     "    correct = 0\n",
     "    incorrect = 0 \n",
     "    dates = np.array([])\n",
     "    for i in range(times.size):\n",
-    "        date = times[i].strftime('%Y/%m/%d - %H')\n",
+    "        date = times[i].strftime('%Y/%m/%d - %H:%M:%S')\n",
+    "        if date[0:9] == '2021/01/2' or date[0:9] == '2021/01/3' or date[0:7] == '2021/02' or date[0:7] == '2021/02' or date[0:9] == '2021/03/0' or date[0:9] == '2021/03/1':\n",
+    "            continue\n",
     "        dates = np.append(dates, date)\n",
-    "\n",
-    "    for i in np.unique(dates):\n",
+    "    if loudness == 1:\n",
+    "        print('Not evaluating on data between Jan 20. 2021 - Mar 19. 2021')\n",
+    "    \n",
+    "    secG = 0\n",
+    "    secB = 0\n",
+    "    for i in dates:\n",
     "        if i[0:10] in sbm:\n",
-    "            print('correct: '+i)\n",
+    "            if loudness == 1:\n",
+    "                print('correct: '+i)\n",
     "            correct = correct +1\n",
+    "            secG = secG + DT_SBM2\n",
     "        else:\n",
     "            incorrect = incorrect + 1 \n",
+    "            secB = secB + DT_SBM2\n",
     "            if i[0:10] not in fp:\n",
-    "                print('check ' + i)\n",
+    "                if loudness == 1:\n",
+    "                    print('check ' + i)\n",
     "            else:\n",
-    "                print('incorrect: ' + i)\n",
+    "                if loudness == 1:\n",
+    "                    print('incorrect: ' + i)\n",
     "            \n",
-    "    print('total correct: ' + str(correct))\n",
-    "    print('total incorrect: ' + str(incorrect))"
+    "    print('Total correct triggers: %d' %correct)\n",
+    "    print('Total incorrect triggers: %d' %incorrect)\n",
+    "    print('----------------------------------')\n",
+    "    print('Correct time in SBM2 mode: %ds' %secG)\n",
+    "    print('Inorrect time in SBM2 mode: %ds' %secB)\n",
+    "    if incorrect != 0:\n",
+    "        print('Accuracy %0.2f' %(correct/(correct+incorrect)))"
    ]
   },
   {
@@ -151,22 +199,37 @@
    "source": [
     "# CONFIGURATION CELL #\n",
     "# Confirmation default \n",
-    "condef = {'EPEAK_THRES': 200, 'FP_MIN': 5000, 'FP_MAX': 50000, 'NW_THRES': 2, 'DT_LW': 304,  'N_LW_THRES': 5 , 'title': '_confirmation', 'type': 'default'}\n",
+    "condef   = {'EPEAK_THRES': 200, 'FP_MIN': 5000, 'FP_MAX': 50000, 'NW_THRES': 2, 'DT_LW': 304 , 'N_LW_THRES': 5 , 'DT_SBM2':  900, 'RUA': 0.5, 'title': '_confirmation', 'type': 'default'}\n",
     "\n",
     "# Degraded default ('_F' is removed for convenience)\n",
-    "degdef = {'EPEAK_THRES': 728, 'FP_MIN': 5000, 'FP_MAX': 50000, 'NW_THRES': 3, 'DT_LW': 1200, 'N_LW_THRES': 20, 'title': '_degraded', 'type': 'default'}\n",
+    "degdef   = {'EPEAK_THRES': 728, 'FP_MIN': 5000, 'FP_MAX': 50000, 'NW_THRES': 3, 'DT_LW': 1200, 'N_LW_THRES': 20, 'DT_SBM2': 7200, 'RUA': 0.5, 'title': '_degraded',  'type': 'default'}\n",
     "\n",
     "# Outdated confirmation default \n",
-    "ocondef = {'EPEAK_THRES': 728, 'FP_MIN': 5000, 'FP_MAX': 60000, 'NW_THRES': 3, 'DT_LW': 2400, 'N_LW_THRES': 20, 'title': 'confirmation', 'type': 'outdated-default'}\n",
+    "ocondef  = {'EPEAK_THRES': 728, 'FP_MIN': 5000, 'FP_MAX': 60000, 'NW_THRES': 3, 'DT_LW': 2400, 'N_LW_THRES': 20, 'DT_SBM2': 7200, 'RUA': 0.5, 'title': 'confirmation',  'type': 'outdated-default'}\n",
     "\n",
     "# Outdated degraded default ('_F' is removed for convenience)\n",
-    "odegdef = {'EPEAK_THRES': 728, 'FP_MIN': 5000, 'FP_MAX': 60000, 'NW_THRES': 3, 'DT_LW': 1200, 'N_LW_THRES': 20, 'title': 'degraded', 'type': 'outdated-default'}\n",
+    "odegdef  = {'EPEAK_THRES': 728, 'FP_MIN': 5000, 'FP_MAX': 60000, 'NW_THRES': 3, 'DT_LW': 1200, 'N_LW_THRES': 20, 'DT_SBM2': 7200, 'RUA': 0.5, 'title': 'degraded', 'type': 'outdated-default'}\n",
+    "\n",
+    "# Confirmation default HK\n",
+    "condefHK = {'EPEAK_THRES': 200, 'FP_MIN': 5000, 'FP_MAX': 50000, 'NW_THRES': 2, 'DT_LW': 304 , 'N_LW_THRES': 5 , 'DT_SBM2':  900, 'RUA': 0.5, 'title': '_confirmation', 'type': 'default_FROM HK LOG'}\n",
+    "\n",
+    "# Degraded default ('_F' is removed for convenience) HK\n",
+    "degdefHK = {'EPEAK_THRES': 728, 'FP_MIN': 5000, 'FP_MAX': 50000, 'NW_THRES': 3, 'DT_LW': 1200, 'N_LW_THRES': 20, 'DT_SBM2': 7200, 'RUA': 0.5, 'title': '_degraded', 'type': 'default_FROM HK LOG'}\n",
     "\n",
     "# Custom config 1\n",
-    "custom1 = {'EPEAK_THRES': 200, 'FP_MIN': 5000, 'FP_MAX': 50000, 'NW_THRES': 1, 'DT_LW': 1200,  'N_LW_THRES': 5 , 'title': 'custom1', 'type': 'dev'}\n",
+    "custom1  = {'EPEAK_THRES': 200, 'FP_MIN': 5000, 'FP_MAX': 50000, 'NW_THRES': 1, 'DT_LW': 1200, 'N_LW_THRES': 5 , 'DT_SBM2': 7200, 'RUA': 0.5, 'title': 'custom1', 'type': 'dev'}\n",
     "\n",
     "# Custom config 2\n",
-    "custom2 = {'EPEAK_THRES': 150, 'FP_MIN': 5000, 'FP_MAX': 50000, 'NW_THRES': 1, 'DT_LW': 1200,  'N_LW_THRES': 5 , 'title': 'custom2', 'type': 'dev'}\n"
+    "custom2  = {'EPEAK_THRES': 150, 'FP_MIN': 5000, 'FP_MAX': 50000, 'NW_THRES': 1, 'DT_LW': 1200, 'N_LW_THRES': 5 , 'DT_SBM2': 7200, 'RUA': 0.5, 'title': 'custom2', 'type': 'dev'}\n",
+    "\n",
+    "# Custom config 3 - Type III optimized\n",
+    "custom3  = {'EPEAK_THRES': 200, 'FP_MIN': 6000, 'FP_MAX': 60000, 'NW_THRES': 1, 'DT_LW': 1200, 'N_LW_THRES': 5 , 'DT_SBM2':  7200, 'RUA': 1.0, 'title': 'custom3', 'type': 'dev - Type III optimized'}\n",
+    "\n",
+    "# Custom config 3 - Type III optimized\n",
+    "custom4  = {'EPEAK_THRES': 120, 'FP_MIN': 6000, 'FP_MAX': 50000, 'NW_THRES': 1, 'DT_LW':  600, 'N_LW_THRES': 7 , 'DT_SBM2':  7200, 'RUA': 1.0, 'title': 'custom4', 'type': 'dev - Type III optimized'}\n",
+    "\n",
+    "# Custom config 3 - Type III optimized\n",
+    "custom5  = {'EPEAK_THRES': 100, 'FP_MIN': 6000, 'FP_MAX': 50000, 'NW_THRES': 1, 'DT_LW':  600, 'N_LW_THRES': 8 , 'DT_SBM2':  7200, 'RUA': 1.0, 'title': 'custom5', 'type': 'dev - Type III optimized'}"
    ]
   },
   {
@@ -179,10 +242,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "incorrect: 2021/03/11 - 08\n",
-      "incorrect: 2021/03/11 - 09\n",
-      "total correct: 0\n",
-      "total incorrect: 2\n"
+      "Not evaluating on data between Jan 20. 2021 - Mar 19. 2021\n",
+      "Total correct triggers: 0\n",
+      "Total incorrect triggers: 0\n",
+      "----------------------------------\n",
+      "Correct time in SBM2 mode: 0s\n",
+      "Inorrect time in SBM2 mode: 0s\n"
      ]
     }
    ],
@@ -195,71 +260,32 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "9916f62f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "correct: 2020/11/17 - 13\n",
-      "correct: 2020/11/17 - 14\n",
-      "incorrect: 2020/12/27 - 04\n",
-      "incorrect: 2020/12/27 - 08\n",
-      "check 2021/01/26 - 13\n",
-      "check 2021/01/26 - 14\n",
-      "check 2021/01/26 - 15\n",
-      "check 2021/01/26 - 16\n",
-      "check 2021/01/26 - 17\n",
-      "check 2021/01/26 - 18\n",
-      "check 2021/02/18 - 14\n",
-      "check 2021/02/18 - 15\n",
-      "check 2021/02/19 - 10\n",
-      "check 2021/02/19 - 11\n",
-      "check 2021/02/19 - 12\n",
-      "check 2021/02/19 - 13\n",
-      "check 2021/02/19 - 20\n",
-      "check 2021/02/22 - 16\n",
-      "check 2021/02/22 - 17\n",
-      "check 2021/02/22 - 18\n",
-      "check 2021/02/22 - 19\n",
-      "check 2021/02/22 - 20\n",
-      "check 2021/03/10 - 21\n",
-      "check 2021/03/10 - 23\n",
-      "incorrect: 2021/03/11 - 00\n",
-      "incorrect: 2021/03/11 - 01\n",
-      "incorrect: 2021/03/11 - 02\n",
-      "incorrect: 2021/03/11 - 03\n",
-      "incorrect: 2021/03/11 - 04\n",
-      "incorrect: 2021/03/11 - 05\n",
-      "incorrect: 2021/03/11 - 06\n",
-      "incorrect: 2021/03/11 - 07\n",
-      "incorrect: 2021/03/11 - 08\n",
-      "incorrect: 2021/03/11 - 09\n",
-      "incorrect: 2021/03/11 - 10\n",
-      "incorrect: 2021/03/11 - 11\n",
-      "incorrect: 2021/03/11 - 12\n",
-      "incorrect: 2021/03/11 - 13\n",
-      "incorrect: 2021/03/11 - 15\n",
-      "incorrect: 2021/03/11 - 16\n",
-      "incorrect: 2021/03/11 - 17\n",
-      "incorrect: 2021/03/11 - 18\n",
-      "incorrect: 2021/03/11 - 19\n",
-      "incorrect: 2021/03/11 - 20\n",
-      "incorrect: 2021/03/11 - 21\n",
-      "incorrect: 2021/03/11 - 22\n",
-      "incorrect: 2021/03/11 - 23\n",
-      "check 2021/03/12 - 00\n",
-      "check 2021/03/12 - 01\n",
-      "correct: 2021/05/09 - 16\n",
-      "correct: 2021/05/22 - 00\n",
-      "correct: 2021/05/22 - 07\n",
-      "correct: 2021/05/23 - 08\n",
-      "correct: 2021/05/23 - 09\n",
-      "correct: 2021/05/23 - 10\n",
-      "correct: 2021/05/23 - 11\n",
-      "incorrect: 2021/05/31 - 19\n",
-      "total correct: 9\n",
-      "total incorrect: 48\n"
+      "Not evaluating on data between Jan 20. 2021 - Mar 19. 2021\n",
+      "correct: 2020/11/17 - 13:58:36\n",
+      "incorrect: 2020/12/27 - 04:46:07\n",
+      "incorrect: 2020/12/27 - 08:24:03\n",
+      "correct: 2021/05/09 - 16:20:49\n",
+      "correct: 2021/05/22 - 00:41:18\n",
+      "correct: 2021/05/22 - 07:31:58\n",
+      "correct: 2021/05/22 - 07:47:10\n",
+      "correct: 2021/05/23 - 08:56:35\n",
+      "correct: 2021/05/23 - 10:15:15\n",
+      "correct: 2021/05/23 - 11:29:07\n",
+      "incorrect: 2021/05/31 - 19:39:28\n",
+      "Total correct triggers: 8\n",
+      "Total incorrect triggers: 3\n",
+      "----------------------------------\n",
+      "Correct time in SBM2 mode: 7200s\n",
+      "Inorrect time in SBM2 mode: 2700s\n",
+      "Accuracy 0.73\n"
      ]
     }
    ],
@@ -269,8 +295,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "id": "d8ebf38d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total correct triggers: 11\n",
+      "Total incorrect triggers: 5\n",
+      "----------------------------------\n",
+      "Correct time in SBM2 mode: 79200s\n",
+      "Inorrect time in SBM2 mode: 36000s\n",
+      "Accuracy 0.69\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluate(custom1, loudness=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "9d080c0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total correct triggers: 12\n",
+      "Total incorrect triggers: 10\n",
+      "----------------------------------\n",
+      "Correct time in SBM2 mode: 86400s\n",
+      "Inorrect time in SBM2 mode: 72000s\n",
+      "Accuracy 0.55\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluate(custom2, loudness=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d3307139",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total correct triggers: 11\n",
+      "Total incorrect triggers: 4\n",
+      "----------------------------------\n",
+      "Correct time in SBM2 mode: 79200s\n",
+      "Inorrect time in SBM2 mode: 28800s\n",
+      "Accuracy 0.73\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluate(custom3, loudness=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "14e1ab8a",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total correct triggers: 10\n",
+      "Total incorrect triggers: 5\n",
+      "----------------------------------\n",
+      "Correct time in SBM2 mode: 72000s\n",
+      "Inorrect time in SBM2 mode: 36000s\n",
+      "Accuracy 0.67\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluate(custom4, loudness=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "13cbcd8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total correct triggers: 11\n",
+      "Total incorrect triggers: 6\n",
+      "----------------------------------\n",
+      "Correct time in SBM2 mode: 79200s\n",
+      "Inorrect time in SBM2 mode: 43200s\n",
+      "Accuracy 0.65\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluate(custom5, loudness=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "132027bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not evaluating on data between Jan 20. 2021 - Mar 19. 2021\n",
+      "correct: 2020/11/17 - 13:58:36\n",
+      "correct: 2020/11/18 - 19:40:28\n",
+      "correct: 2020/12/13 - 11:06:05\n",
+      "incorrect: 2020/12/27 - 05:03:11\n",
+      "incorrect: 2020/12/27 - 08:23:15\n",
+      "correct: 2021/05/09 - 16:13:53\n",
+      "correct: 2021/05/22 - 00:21:34\n",
+      "correct: 2021/05/22 - 04:10:54\n",
+      "correct: 2021/05/22 - 07:31:10\n",
+      "correct: 2021/05/23 - 05:02:59\n",
+      "correct: 2021/05/23 - 08:55:47\n",
+      "correct: 2021/05/23 - 11:29:07\n",
+      "correct: 2021/05/29 - 00:40:31\n",
+      "incorrect: 2021/05/31 - 19:45:04\n",
+      "incorrect: 2021/06/08 - 16:01:41\n",
+      "Total correct triggers: 11\n",
+      "Total incorrect triggers: 4\n",
+      "----------------------------------\n",
+      "Correct time in SBM2 mode: 79200s\n",
+      "Inorrect time in SBM2 mode: 28800s\n",
+      "Accuracy 0.73\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluate(custom3, loudness=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4e437a51",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not evaluating on data between Jan 20. 2021 - Mar 19. 2021\n",
+      "incorrect: 2020/03/05 - 08:13:18\n",
+      "correct: 2020/11/17 - 13:59:08\n",
+      "incorrect: 2020/11/24 - 15:22:09\n",
+      "correct: 2020/12/13 - 10:48:45\n",
+      "incorrect: 2020/12/27 - 04:51:27\n",
+      "incorrect: 2020/12/27 - 07:50:27\n",
+      "correct: 2021/05/09 - 14:28:43\n",
+      "correct: 2021/05/09 - 16:28:49\n",
+      "correct: 2021/05/22 - 00:22:22\n",
+      "correct: 2021/05/22 - 04:15:26\n",
+      "correct: 2021/05/22 - 07:31:42\n",
+      "correct: 2021/05/23 - 08:56:35\n",
+      "correct: 2021/05/23 - 11:29:39\n",
+      "correct: 2021/05/29 - 00:41:03\n",
+      "incorrect: 2021/05/31 - 20:00:16\n",
+      "Total correct triggers: 10\n",
+      "Total incorrect triggers: 5\n",
+      "----------------------------------\n",
+      "Correct time in SBM2 mode: 72000s\n",
+      "Inorrect time in SBM2 mode: 36000s\n",
+      "Accuracy 0.67\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluate(custom4, loudness=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04b0fe48",
    "metadata": {},
    "outputs": [],
    "source": []
